# pico-remote-message-display

./: .gitmodules  LICENSE  README.md  pack.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: display.py  index.html  main.py  posted.html  server.py  styles.css  tasks.py
src/templates/: index.html  posted.html  redirect.html
